--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
   },
   "homepage": "https://github.com/a179346/short-url#readme",
   "dependencies": {
+    "axios": "^0.25.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
+    "shortid": "^2.2.16",
     "validax": "^1.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.13",
+    "@types/shortid": "0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^7.32.0",
